# scheduler

./: Cargo.toml  Makefile  README.md  rules.toml
.dependabot/: config.yml
data/: process-scheduler-daemon.service  process-scheduler.service
pidwatcher/: Cargo.toml
pidwatcher/examples/: example.rs
pidwatcher/src/: lib.rs
scheduler/: Cargo.toml
scheduler/examples/: ncpus.rs
scheduler/src/: lib.rs
scheduler/src/priority/: cpu.rs  io.rs  mod.rs
scheduler/src/scheduler/: cpuset.rs  errors.rs  mod.rs  parameters.rs  policy.rs
src/: main.rs
src/config/: mod.rs  rules.rs
