[package]
name = "process-scheduler-daemon"
version = "0.1.0"
description = "Process scheduling daemon for UNIX-like systems"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["process", "scheduler", "daemon", "linux"]
categories = ["os::unix-apis"]

[workspace]
members = [ "pidwatcher", "scheduler" ]

[dependencies]
err-derive = "0.1.5"
indexmap = { version = "1.0.2", features = [ "serde-1" ]}
libc = "0.2.54"
pidwatcher = { path = "pidwatcher" }
process-scheduler = { path = "scheduler" }
regex = "1.1.6"
serde = "1.0.91"
serde_derive = "1.0.91"
toml = "0.5.0"
users = "0.9.1"
