[package]
name = "process-scheduler"
version = "0.1.0"
description = "Process scheduling daemon for UNIX-like systems"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["process", "scheduler", "daemon", "linux"]
categories = ["os::unix-apis"]

[workspace]
members = [ "pidwatcher", "scheduler" ]

[dependencies]
err-derive = "0.2.4"
indexmap = { version = "1.3.2", features = [ "serde-1" ]}
libc = "0.2.76"
pidwatcher = { path = "pidwatcher" }
scheduler = { path = "scheduler" }
regex = "1.3.7"
serde = "1.0.115"
serde_derive = "1.0.110"
toml = "0.5.6"
users = "0.10.0"

[profile.release]
codegen-units = 1
lto = true
