[package]
name = "process-scheduler"
version = "0.1.0"
description = "Process scheduling daemon for UNIX-like systems"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["process", "scheduler", "daemon", "linux"]
categories = ["os::unix-apis"]

[workspace]
members = [ "pidwatcher", "scheduler" ]

[dependencies]
err-derive = "0.3.0"
indexmap = { version = "1.6.1", features = [ "serde-1" ]}
libc = "0.2.82"
pidwatcher = { path = "pidwatcher" }
scheduler = { path = "scheduler" }
regex = "1.4.3"
serde = "1.0.119"
serde_derive = "1.0.119"
toml = "0.5.8"
users = "0.11.0"

[profile.release]
codegen-units = 1
lto = true
